<resources>
    <string name="app_name">Digital prototype</string>
    <string name="istagram_logo">INSTAGRAM</string>
    <string name="discord_label">Discord</string>
    <string name="instagram_label">Instagram</string>
    <string name="youtube_label">YouTube</string>
    <string name="tiktok_label">TikTok</string>
    <string name="spotify_label">Spotify</string>
    <string name="cycling">cycling</string>
    <string name="gym">gym</string>
    <string name="shopping">shopping</string>
    <string name="next">NEXT</string>
    <string name="restaurant_logo">restaurant logo</string>
    <string name="relax_logo">relax logo</string>
    <string name="study_logo">study logo</string>
    <string name="sm_restaurant">sm_restaurant</string>
    <string name="sm_relax">sm_relax</string>
    <string name="sm_gym">sm_gym</string>
    <string name="sm_cycling">sm_cycling</string>
    <string name="sm_shopping">sm_shopping</string>
    <string name="confirm_priority">confirm_priority</string>
</resources>
