<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppTimeTracking">

    // INSTAGRAM
    // Logo
    <ImageView
        android:id="@+id/instagram_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instagram_logo" />

    // Label
    <TextView
        android:id="@+id/instragram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/instagram_label"
        app:layout_constraintStart_toEndOf="@+id/instagram_logo"
        app:layout_constraintTop_toTopOf="@+id/instagram_logo" />

    <ProgressBar
        android:id="@+id/pb_instagram"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="#FFFFFF"
        android:progress="75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/instagram_logo"
        app:layout_constraintTop_toBottomOf="@+id/instragram" />

    // Time consumed

    <TextView
        android:id="@+id/instagram_progress_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="8dp"
        android:text="7h:23m"
        app:layout_constraintBottom_toTopOf="@+id/pb_instagram"
        app:layout_constraintEnd_toEndOf="parent" />

    // DISCORD
    // Logo
    <ImageView
        android:id="@+id/discord_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagram_logo"
        app:srcCompat="@drawable/discord_logo" />

    // Label
    <TextView
        android:id="@+id/discord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/discord_label"
        app:layout_constraintStart_toEndOf="@+id/discord_logo"
        app:layout_constraintTop_toBottomOf="@+id/instagram_logo" />

    <ProgressBar
        android:id="@+id/pb_discord"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:progress="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/discord_logo"
        app:layout_constraintTop_toBottomOf="@+id/discord" />

    // Time consumed
    <TextView
        android:id="@+id/discord_progress_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="8dp"
        android:text="1h:15m"
        app:layout_constraintBottom_toTopOf="@+id/pb_discord"
        app:layout_constraintEnd_toEndOf="parent" />

    // YOUTUBE
    // Logo
    <ImageView
        android:id="@+id/youtube_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discord_logo"
        app:srcCompat="@drawable/youtube_logo" />

    // Label
    <TextView
        android:id="@+id/youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/youtube_label"
        app:layout_constraintStart_toEndOf="@+id/youtube_logo"
        app:layout_constraintTop_toBottomOf="@+id/discord_logo" />

    <ProgressBar
        android:id="@+id/pb_youtube"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:progress="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/youtube_logo"
        app:layout_constraintTop_toBottomOf="@+id/youtube" />

    // Time consumed
    <TextView
        android:id="@+id/youtube_progress_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="8dp"
        android:text="1h:50m"
        app:layout_constraintBottom_toTopOf="@+id/pb_youtube"
        app:layout_constraintEnd_toEndOf="parent" />

    // TIKTOK
    // Logo
    <ImageView
        android:id="@+id/tiktok_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtube_logo"
        app:srcCompat="@drawable/tiktok_logo" />

    // Label
    <TextView
        android:id="@+id/tiktok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/tiktok_label"
        app:layout_constraintStart_toEndOf="@+id/tiktok_logo"
        app:layout_constraintTop_toBottomOf="@+id/youtube_logo" />

    <ProgressBar
        android:id="@+id/pb_tiktok"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tiktok_logo"
        app:layout_constraintTop_toBottomOf="@+id/tiktok" />

    // Time consumed
    <TextView
        android:id="@+id/tiktok_progress_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="8dp"
        android:text="12h:00m"
        app:layout_constraintBottom_toTopOf="@+id/pb_tiktok"
        app:layout_constraintEnd_toEndOf="parent" />


    // SPOTIFY
    // Logo
    <ImageView
        android:id="@+id/spotify_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiktok_logo"
        app:srcCompat="@drawable/spotify_logo" />

    // Label
    <TextView
        android:id="@+id/spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/spotify_label"
        app:layout_constraintStart_toEndOf="@+id/spotify_logo"
        app:layout_constraintTop_toBottomOf="@+id/tiktok_logo" />

    <ProgressBar
        android:id="@+id/pb_spotify"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spotify_logo"
        app:layout_constraintTop_toBottomOf="@+id/spotify" />

    // Time consumed
    <TextView
        android:id="@+id/spotify_progress_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="8dp"
        android:text="5h:00m"
        app:layout_constraintBottom_toTopOf="@+id/pb_spotify"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>